[gd_scene load_steps=13 format=3 uid="uid://biq2ohctus88u"]

[ext_resource type="Script" uid="uid://crwurt3jn7f4o" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://c0hjb8povdcib" path="res://Assets/Enemies/slime_red.png" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://dby5fyx0d015c" path="res://MusicAndSounds/SFX/jump.ogg" id="4_3smsa"]
[ext_resource type="AudioStream" uid="uid://p4453qnl26p2" path="res://MusicAndSounds/SFX/death_1.ogg" id="4_x3wgy"]
[ext_resource type="AudioStream" uid="uid://chse7g6gnuohi" path="res://MusicAndSounds/SFX/obtained.ogg" id="6_f1ek2"]
[ext_resource type="AudioStream" uid="uid://b4l3uaex21kpg" path="res://MusicAndSounds/SFX/impact.ogg" id="7_3smsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(12, 10)

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cvnsp"]
resource_name = "jump"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 2]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3wgy"]
_data = {
&"RESET": SubResource("Animation_vgqql"),
&"idle": SubResource("Animation_6t5aa"),
&"jump": SubResource("Animation_cvnsp"),
&"walk": SubResource("Animation_fkybt")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("1_v0iea")
flip_h = true
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3wgy")
}

[node name="JumpingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3smsa")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x3wgy")

[node name="RespawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_f1ek2")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3smsa")
